# PopQuiz

./: .gitignore  .kube-linter.yaml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci-Lint.yml
backend/: .dockerignore  .env.example  .gitignore  DockerFile  README.md  eslint.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  tsconfig.json
docker-compose/: .env.example.backend  .env.example.backend.development  .env.example.frontend  .env.example.frontend.development  .env.example.langchain  README.md  dev.yml  production.yml  staging.yml
frontend/: .dockerignore  .env.example  DockerFile  README.md  eslint.config.mjs  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml  prettier.config.js  stylelint.config.cjs  tailwind.config.js  tsconfig.json
k8s/: .env.example.backend  .env.example.frontend  .env.example.langchain  GKE.md  README.md
langchain/: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
langchain/app/: config.py  main.py  models.py
langchain/app/chains/: image_chain.py  rag_chain.py  topic_chain.py
langchain/app/interfaces/: embedder.py  llm_provider.py  vectorstore.py
langchain/app/providers/: gemini_provider.py  qdrant_provider.py
langchain/app/routers/: quiz.py
langchain/app/services/: quiz_service.py
langchain/app/utils/: parser.py
langchain/docker/: Dockerfile  Dockerfile.dev
redis/: package.json  pnpm-lock.yaml  tsconfig.json
terraform/: .gitignore  README.md  main.tf  terraform.tfvars.example  variables.tf  versions.tf
(+143 files in other folders)
